--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="card_note_body">Note body</string>
     <string name="delete_bar">Delete Bar</string>
     <string name="note_delete_question">Are you sure you want to delete this note?</string>
+    <string name="note_date">5/17/2023</string>
+    <string name="note_filter">note filter</string>
+    <string name="priority_high">High</string>
+    <string name="priority_medium">Medium</string>
+    <string name="priority_low">Low</string>
 </resources>
