--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="priority_low">Low</string>
     <string name="dialog_no">No</string>
     <string name="dialog_yes">Yes</string>
+    <string name="search_menu">Search</string>
 </resources>
